[gd_scene load_steps=10 format=3 uid="uid://djqg5r03rlxrv"]

[ext_resource type="Theme" uid="uid://d20y8va2yhr08" path="res://Art/Themes/ui text large.tres" id="1_furl2"]
[ext_resource type="Material" uid="uid://bpyc72ajp6yfb" path="res://Art/Shaders/colorswap.tres" id="1_g740t"]
[ext_resource type="PackedScene" uid="uid://beputxcs1pxrh" path="res://Scenes/UI/JuicyMovement.tscn" id="2_abf8w"]
[ext_resource type="Script" path="res://Scripts/level_summary.gd" id="2_tdvtu"]
[ext_resource type="Theme" uid="uid://bmv1iku1at618" path="res://Art/Themes/ui text mid.tres" id="3_kkub8"]
[ext_resource type="Theme" uid="uid://b6o7rf6iavtxi" path="res://Art/Themes/button.tres" id="5_s5jnv"]
[ext_resource type="Script" path="res://Scripts/ui_menu_button.gd" id="6_yhemx"]
[ext_resource type="Theme" uid="uid://dawp23mso2e5a" path="res://Art/Themes/healthbar.tres" id="8_ty0vk"]
[ext_resource type="Theme" uid="uid://dpv7tir788p5t" path="res://Art/Themes/ui text small.tres" id="9_mhcqn"]

[node name="LevelSummary" type="ColorRect" node_paths=PackedStringArray("first_button")]
process_mode = 3
z_index = 100
material = ExtResource("1_g740t")
offset_right = 480.0
offset_bottom = 360.0
color = Color(0.101961, 0.101961, 0.101961, 1)
script = ExtResource("2_tdvtu")
first_button = NodePath("Node2D/Buttons/Continue")
metadata/_edit_lock_ = true

[node name="Node2D" type="Control" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D"]
use_parent_material = true
layout_mode = 1
offset_left = -120.0
offset_top = -147.0
offset_right = 135.0
offset_bottom = -79.0
pivot_offset = Vector2(127, 34)
theme = ExtResource("1_furl2")
bbcode_enabled = true
text = "[center]YOU DIED"
fit_content = true
metadata/_edit_group_ = true

[node name="JuicyMovement" parent="Node2D/RichTextLabel" node_paths=PackedStringArray("target_control") instance=ExtResource("2_abf8w")]
use_parent_material = true
target_control = NodePath("..")
bob_frequency = 5.0
bob_amplitude = 10.0
rot_frequency = 2.5
rot_amplitude = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -55.0
offset_right = 105.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2

[node name="XPBar" type="Control" parent="Node2D/VBoxContainer"]
visible = false
use_parent_material = true
custom_minimum_size = Vector2(0, 50.605)
layout_mode = 2
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="Node2D/VBoxContainer/XPBar"]
use_parent_material = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
offset_left = 1.0
offset_top = 21.0
offset_right = 197.0
offset_bottom = 33.0
theme = ExtResource("8_ty0vk")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D/VBoxContainer/XPBar"]
use_parent_material = true
layout_mode = 0
offset_right = 184.0
offset_bottom = 20.0
theme = ExtResource("3_kkub8")
text = "LVL 1"

[node name="Time" type="RichTextLabel" parent="Node2D/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kkub8")
bbcode_enabled = true
text = "[center]TIME:"

[node name="Time2" type="RichTextLabel" parent="Node2D/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kkub8")
bbcode_enabled = true
text = "[center]00:00:00"

[node name="Control" type="Control" parent="Node2D/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="BestTime" type="RichTextLabel" parent="Node2D/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kkub8")
bbcode_enabled = true
text = "[center]BEST TIME:"

[node name="BestTime2" type="RichTextLabel" parent="Node2D/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kkub8")
bbcode_enabled = true
text = "[center]00:00:00"

[node name="Buttons" type="Control" parent="Node2D"]
process_mode = 4
use_parent_material = true
layout_mode = 2
anchors_preset = 0

[node name="Continue" type="Button" parent="Node2D/Buttons"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 94.0
offset_right = 44.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_s5jnv")
text = "RETRY"
flat = true
script = ExtResource("6_yhemx")

[node name="Restart" type="Button" parent="Node2D/Buttons"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 122.0
offset_right = 39.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_s5jnv")
text = "QUIT"
flat = true
script = ExtResource("6_yhemx")

[node name="RichTextLabel2" type="RichTextLabel" parent="Node2D"]
visible = false
use_parent_material = true
layout_mode = 0
offset_left = 84.0
offset_top = 22.0
offset_right = 153.0
offset_bottom = 44.0
pivot_offset = Vector2(34, 9)
theme = ExtResource("9_mhcqn")
bbcode_enabled = true
text = "[center]New Record!!!"

[node name="JuicyMovement" parent="Node2D/RichTextLabel2" node_paths=PackedStringArray("target_control") instance=ExtResource("2_abf8w")]
use_parent_material = true
target_control = NodePath("..")
bob_frequency = 5.0
bob_amplitude = 10.0
rot_frequency = 2.5
rot_amplitude = 10.0

[node name="JuicyMovement" parent="." node_paths=PackedStringArray("target_control") instance=ExtResource("2_abf8w")]
use_parent_material = true
target_control = NodePath("..")
slide_in = true

[connection signal="pressed" from="Node2D/Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Node2D/Buttons/Restart" to="." method="_on_restart_pressed"]
